home page terminée

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,12 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+<div class="container">
+
+
+<div class="jumbotron center">
+	<h1>Welcome to My Recipes site!</h1>
+	<h2>la plaque tournante des recettes gabonaise </h2>
+	<p><%= link_to "Login or Signup", "#", class:'btn btn-danger btn-lg' %></p>
+</div>
+
+
+</div>
