--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,10 +15,22 @@ $navbar-default-bg: #6f5499;
   color: #fff;
   text-decoration: none;
 } 
+
+.navbar-default{
+  margin-bottom:1px !important;
+}
+
 .navbar-default .navbar-nav > li > a {
     color: #cdbfe3;
 }
 
 .center {
   text-align: center;
+}
+
+.jumbotron {
+  background-image: asset-url('p2.jpg');
+  background-size: cover;
+  height: 300px;
+  color:black;
 }
