--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
 
-<div class="container">
+<div class="container mt-0">
 
 
-<div class="jumbotron center">
+<div class="jumbotron center ">
 	<h1>Welcome to My Recipes site!</h1>
 	<h2>la plaque tournante des recettes gabonaise </h2>
 	<p><%= link_to "Login or Signup", "#", class:'btn btn-danger btn-lg' %></p>
