ajouter une recette + TDD

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -76,3 +76,23 @@ footer ul li {
   color: #fff;
   text-decoration: none;
 }
+
+.description{
+  margin-top: 0px;
+}
+
+.well a{
+  color:#202e44;
+}
+
+.gravatar {
+  border-radius: 10px;
+}
+
+.chef_info {
+  margin-top: 10px;
+}
+
+.colormatch a{
+  color:#202e44;
+}
