--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
   <body>
     
   	<%= render 'layouts/navigation' %>
-    <%= yield %>
+    <div class="container"><%= yield %></div>
+    
     <%= render 'layouts/footer' %> 
   </body>
 </html>
