--- a/app/views/recettes/_form.html.erb
+++ b/app/views/recettes/_form.html.erb
@@ -1,27 +1,41 @@
-<%= form_with(model: recette, local: true) do |form| %>
-  <% if recette.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(recette.errors.count, "error") %> prohibited this recette from being saved:</h2>
+<div class="row">
+  <div class="col-md-12">
+ 
+<%= form_for(recette, :html => {class:"form-horizontal",role:"form"}, local: true) do |form| %>
 
-      <ul>
-      <% recette.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="field">
+<div class="form-group">
+  <div class="control-label col-md-2">
     <%= form.label :name %>
-    <%= form.text_field :name, id: :recette_name %>
   </div>
+  <div class="col-md-8">
+    <%= form.text_field :name, id: :recette_name, class:"form-control",placeholder:"nom de la recette", autofocus:true %>
+  </div>
+</div>
 
-  <div class="field">
+<div class="form-group">
+  <div class="control-label col-md-2">
     <%= form.label :description %>
-    <%= form.text_area :description, id: :recette_description %>
   </div>
+  <div class="col-md-8">
+    <%= form.text_area :description, id: :recette_description,rows:10, class:"form-control",placeholder:"description de la recette" %>
+  </div>
+</div>
 
-  <div class="actions">
-    <%= form.submit %>
+
+  <div class="form-group">
+    <div class="col-md-2 col-md-offset-2"><%= form.submit class:"btn btn-primary btn-lg btn-xlarge" %></div>
+    
   </div>
 <% end %>
+
+
+
+      
+
+  </div>
+
+
+</div>
+
+
