--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,12 @@
   <body>
     
   	<%= render 'layouts/navigation' %>
-    <div class="container"><%= yield %></div>
+    <%= render 'layouts/message' %>
+    <div class="container">
+      
+      <%= yield %>
+        
+      </div>
     
     <%= render 'layouts/footer' %> 
   </body>
