--- a/app/views/recettes/new.html.erb
+++ b/app/views/recettes/new.html.erb
@@ -1,24 +1,5 @@
 <%= render 'shared/page_title', title:"créer une nouvelle recette" %>
-<% if @recette.errors.any? %>
-	<div class="row">
-		<div class="col-md-8 col-md-offset-2">
-			<div class="panel panel-danger">
-				<div class="panel-heading">
-					<h2 class="panel-title"> <%= pluralize(@recette.errors.count, "erreur") %> empeche l'enregistrement  </h2>
-					<div class="panel-body">
-						<ul>
-							<%@recette.errors.full_messages.each do |msg|  %>
-							     <li><%= fct msg %></li>
-							<%end%>
-						</ul>
-
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-<%end%>
+<%= render 'shared/errors' %>
 <%= render 'form', recette: @recette %>
 
 <div class="col-md-4 col-md-offset-4 colormatch">[   <%= link_to "Annuler et retourner à la liste des recettes", recettes_path %> ]</div>
