--- a/app/views/recettes/edit.html.erb
+++ b/app/views/recettes/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Recette</h1>
-
+<%= render 'shared/page_title', title:"Mettre à jour une recette" %>
+<%= render 'shared/errors' %>
 <%= render 'form', recette: @recette %>
 
-<%= link_to 'Show', @recette %> |
-<%= link_to 'Back', recettes_path %>
+<div class="col-md-4 col-md-offset-4 colormatch">[   <%= link_to "Annuler et retourner à la liste des recettes", recettes_path %> ]</div>
+
