--- a/app/views/recettes/new.html.erb
+++ b/app/views/recettes/new.html.erb
@@ -1,5 +1,5 @@
 <%= render 'shared/page_title', title:"créer une nouvelle recette" %>
-<%= render 'shared/errors' %>
+<%= render 'shared/errors', obj:@recette %>
 <%= render 'form', recette: @recette %>
 
 <div class="col-md-4 col-md-offset-4 colormatch">[   <%= link_to "Annuler et retourner à la liste des recettes", recettes_path %> ]</div>
