--- a/app/views/recettes/show.html.erb
+++ b/app/views/recettes/show.html.erb
@@ -17,6 +17,7 @@
 		<%= link_to "Mettre à jour cette recette",edit_recette_path(@recette),class:"btn btn-xs btn-warning" %>
 		<%= link_to "Supprimer cette recette", recette_path(@recette),method: :delete,
 		                                     data:{confirm:"Validez la suppression"},class:"btn btn-xs btn-danger" %>
+		<%= link_to "Retourner à la liste des recettes",recettes_path,class:"btn btn-xs btn-primary" %>
 	</div>
 </div>
 
