--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,12 +1,12 @@
-<% if @recette.errors.any? %>
+<% if obj.errors.any? %>
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2">
 			<div class="panel panel-danger">
 				<div class="panel-heading">
-					<h2 class="panel-title"> <%= pluralize(@recette.errors.count, "erreur") %> empeche l'enregistrement  </h2>
+					<h2 class="panel-title"> <%= pluralize(obj.errors.count, "erreur") %> empêche(nt) l'enregistrement  </h2>
 					<div class="panel-body">
 						<ul>
-							<%@recette.errors.full_messages.each do |msg|  %>
+							<%obj.errors.full_messages.each do |msg|  %>
 							     <li><%= fct msg %></li>
 							<%end%>
 						</ul>
