--- a/app/views/recettes/show.html.erb
+++ b/app/views/recettes/show.html.erb
@@ -10,7 +10,7 @@
 	<div class="pull-right">
 		<p class="center"><em>Creer par : </em></p>
 		<p class="center"> <%= link_to gravatar_for(@recette.chef), recettes_path  %> </p>
-		<p><small><%= @recette.chef.chefname.capitalize%></small></p>
+		<p><small><%= @recette.chef.chefname.titleize%></small></p>
 		<div class="pull-right">créé depuis : <%= time_ago_in_words(@recette.created_at) %></div>
 	</div>
 	<div class="recette_actions">
