--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
 <div class="jumbotron center ">
 	<h1>Welcome to My Recipes site!</h1>
 	<h2>la plaque tournante des recettes gabonaise </h2>
-	<p><%= link_to "Voir toutes les recettes",recettes_path, class:'btn btn-danger btn-xlarge' %></p>
+	<p><%= link_to "Inscrivez vous ici",signup_path, class:'btn btn-danger btn-xlarge' %></p>
 </div>
 
 
