--- a/app/views/chefs/show.html.erb
+++ b/app/views/chefs/show.html.erb
@@ -1,24 +1,25 @@
-<%= render 'shared/page_title', title:"Votre Espace Privé" %>
+<%= render 'shared/page_title', title:"le Profile de #{@chef.chefname}" %>
 
-<p>
-  <strong>Chefname:</strong>
-  <%= @chef.chefname %>
-</p>
+<div class="row">
+	<div class="col-md-4 col-md-offset-4 center">
+		<%= gravatar_for @chef , size:150%>
+	</div>
+</div>
 
-<p>
-  <strong>Email:</strong>
-  <%= @chef.email %>
-</p>
+<div class="recette_actions center">
+	<%= link_to "Mettre à jour mon compte",edit_chef_path(@chef),class:"btn btn-xs btn-warning" %>
+	<%= link_to "Supprimer mon compte", chef_path(@chef),method: :delete,
+	                                     data:{confirm:"Validez la suppression"},class:"btn btn-xs btn-danger" %>
+	<%= link_to "lister toutes les recettes",recettes_path,class:"btn btn-xs btn-primary" %>
+</div>
 
-<p>
-  <strong>Password:</strong>
-  <%= @chef.password %>
-</p>
+<h4 align=center> les recettes de <%= @chef.chefname%></h4>
 
-<p>
-  <strong>Password confirmation:</strong>
-  <%= @chef.password_confirmation %>
-</p>
-
-<%= link_to 'Edit', edit_chef_path(@chef) %> |
-<%= link_to 'Back', chefs_path %>
+<%if @chef.recettes.any? %>
+	<%= render 'recettes/recettes' %>
+<%else%>
+	<hr>
+	<div class="row center">
+		<em><small>pas encore de recettes</small></em>
+	</div>
+<%end%>
