--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,4 @@
-$navbar-default-bg: #202e44;
+$navbar-default-bg: #ea5252;
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
@@ -21,7 +21,8 @@ $navbar-default-bg: #202e44;
 }
 
 .navbar-default .navbar-nav > li > a {
-    color: #cdbfe3;
+    color: #eaeaea;
+    font-size: 16px;
 }
 
 .center {
@@ -68,7 +69,7 @@ footer ul li {
 }
 
 .btn-xlarge {
-  background-color: #202e44;
+  background-color: #ea5252;
   color: #fff;
 }
 
@@ -82,7 +83,7 @@ footer ul li {
 }
 
 .well a{
-  color:#202e44;
+  color:#ea5252;
 }
 
 .gravatar {
@@ -94,7 +95,7 @@ footer ul li {
 }
 
 .colormatch a{
-  color:#202e44;
+  color:#ea5252;
 }
 .recette_actions{
   padding-top:5px;
