--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -27,7 +27,7 @@ $navbar-default-bg: #fff;
 
 .navbar-default .navbar-nav > li > a:hover {
  
-    color:#eaeaea ;
+    color:#ea5252;
 }
 
 
@@ -103,6 +103,11 @@ footer ul li {
 .colormatch a{
   color:#ea5252;
 }
+
+.name_color{
+  color:#ea5252;
+}
+
 .recette_actions{
   padding-top:5px;
   a {
