--- a/app/views/chefs/index.html.erb
+++ b/app/views/chefs/index.html.erb
@@ -12,8 +12,14 @@
 
       <h4 align="center"><%= link_to chef.chefname.titleize, chef_path(chef), class:"name_color" %></h4>
 
+      <div class="recette_actions center">
+        <%= link_to "Mettre à jour le compte",edit_chef_path(chef),class:"btn btn-xs btn-warning" %>
+        <%= link_to "Supprimer le compte", chef_path(chef),method: :delete,
+                                             data:{confirm:"Validez la suppression"},class:"btn btn-xs btn-danger" %>
+      </div>
+
       <section class="center">
-        <small align="center"><%= pluralize chef.recettes.count, "recette"%> à son actif  </small>
+        <small align="center"><%= pluralize(chef.recettes.count, "recette") %> à son actif  </small>
       </section>
     </div>
   <%end%>
