--- a/app/views/recettes/_recettes.html.erb
+++ b/app/views/recettes/_recettes.html.erb
@@ -9,7 +9,13 @@
     <h4><%= link_to recette.name, recette_path(recette) %></h4>
     <p><%= truncate(recette.description ,length:150) %></p>
     <p> <span class="quiet"><small> depuis <%= time_ago_in_words recette.created_at %></small> </span></p>
-    
+    <div class="recette_actions">
+      <%if logged_in? && (current_user == recette.chef) || (current_user.admin? if current_user) %>
+        <%= link_to "Mettre à jour cette recette",edit_recette_path(recette),class:"btn btn-xs btn-warning" %>
+        <%= link_to "Supprimer cette recette", recette_path(recette),method: :delete,
+                                             data:{confirm:"Validez la suppression"},class:"btn btn-xs btn-danger" %>
+      <%end%>
+    </div>    
   </div>
 </div>
 <% end %>
