--- a/app/views/chefs/index.html.erb
+++ b/app/views/chefs/index.html.erb
@@ -13,8 +13,11 @@
       <h4 align="center"><%= link_to chef.chefname.titleize, chef_path(chef), class:"name_color" %></h4>
 
       <div class="recette_actions center">
-        <%= link_to "Mettre à jour le compte",edit_chef_path(chef),class:"btn btn-xs btn-warning" %>
-        <%if logged_in? && current_user.admin? && !chef.admin? %>
+        <%#if logged_in? && current_user.admin? && !chef.admin? %>
+
+        <%if logged_in? && (current_user == chef) || (current_user.admin? if current_user)%>
+          <%= link_to "Mettre à jour le compte",edit_chef_path(chef),class:"btn btn-xs btn-warning" %>
+
           <%= link_to "Supprimer le compte", chef_path(chef),method: :delete,
                                                data:{confirm:"Validez la suppression"},class:"btn btn-xs btn-danger" %>
         <%end%>
