--- a/app/views/shared/_page_title.html.erb
+++ b/app/views/shared/_page_title.html.erb
@@ -1,2 +1,2 @@
-<h1 align="center" class="name_color"> <%= title.titleize   %> </h1>
+<h2 align="center" class="name_color"><%== title.titleize   %> </h2>
 <hr>
