--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -24,17 +24,35 @@
             
               <ul class="dropdown-menu">
                 <li><%= link_to "Créer une nouvelle récette", new_recette_path %></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
+                
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Separated link</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">One more separated link</a></li>
               </ul>
 
             
           </li>
         <%end%>
+
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Les ingredients<span class="caret">  </span></a>
+            
+              <ul class="dropdown-menu">
+                <% if logged_in? && current_user.admin? %>
+                  <li><%= link_to "Ajouter un ingredient", new_ingredient_path %></li>
+                <%end%>
+                <li><%= link_to "lister tous les ingredients".capitalize, ingredients_path %></li>
+                <li role="separator" class="divider"></li>
+                <% Ingredient.all.each do |ingredient| %>
+                  <li>   
+                      <%=link_to ingredient_path(ingredient) do %>
+                          <%== "#{ingredient.name.capitalize} " + content_tag(:span, "#{ingredient.recettes.count}", class:"badge") %>
+                      <%end%>
+                  </li>
+                <%end%>
+              </ul>
+
+            
+          </li>
       </ul>
       <div class="center">
         <form class="navbar-form navbar-left">
@@ -48,7 +66,7 @@
         
         <%if logged_in? %>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile <%= "Admin" if current_user.admin? %> - <%=current_user.chefname.titleize%>  <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <p>Profile <%= "Admin" if current_user.admin? %> - <%=current_user.chefname.titleize%>  <span class="caret"></span></p> </a>
             <ul class="dropdown-menu">
               <li><%= link_to "Consulter le profile", chef_path(current_user) %></li>
               <li><%= link_to "Editer le profile", edit_chef_path(current_user) %></li>
