--- a/app/views/recettes/_form.html.erb
+++ b/app/views/recettes/_form.html.erb
@@ -21,7 +21,20 @@
     <%= form.text_area :description, id: :recette_description,rows:10, class:"form-control",placeholder:"description de la recette" %>
   </div>
 </div>
-
+<div class="form-group">
+  <div class="row">
+    <div class="col-md-offset-3 col-md-7">
+      <%#= form.collection_check_boxes(:ingredient_ids, Ingredient.all, :id, :name) %>
+      <%= form.collection_check_boxes :ingredient_ids, Ingredient.all, :id, :name do |cb| %>
+      <span class="text-muted"><%= cb.label(class:"checkbox-inline input_checkbox") {cb.check_box + cb.text} %></span>
+        
+        <span>
+        <%#= cb.label(class:"checkbox-inline input-checkbox")  {cb.check_box(class: "checkbox") + cb.text}%>
+        </span>
+      <%end%>
+    </div>
+  </div>
+</div>
 
   <div class="form-group">
     <div class="col-md-2 col-md-offset-2"><%= form.submit class:"btn btn-primary btn-lg btn-xlarge" %></div>
