Commentaires feature complete

--- a/app/views/recettes/_recettes.html.erb
+++ b/app/views/recettes/_recettes.html.erb
@@ -11,7 +11,7 @@
     <% if recette.ingredients.any? %>
         <p>Ingredients: <%= render recette.ingredients %></p>
     <%end%>
-    <p> <span class="quiet"><small> depuis <%= time_ago_in_words recette.created_at %> par <%= recette.chef.chefname.titleize %></small> </span></p>
+    <p> <span class="quiet"><small> depuis <%= time_ago_in_words recette.created_at %> par <%= recette.chef.chefname.titleize %> | <%= pluralize(recette.commentaires.count, "commentaire") %> </small> </span></p>
     <div class="recette_actions">
       <%if logged_in? && (current_user == recette.chef) || (current_user.admin? if current_user) %>
         <%= link_to "Mettre à jour cette recette",edit_recette_path(recette),class:"btn btn-xs btn-warning" %>
