--- a/app/views/ingredients/_ingredient.html.erb
+++ b/app/views/ingredients/_ingredient.html.erb
@@ -1,1 +1,1 @@
-<span class=""> <%= link_to ingredient.name.capitalize, ingredient_path(ingredient) %> - </span>
+<span class="quiet"> <%= link_to ingredient.name.capitalize, ingredient_path(ingredient) %> - </span>
