--- a/app/views/recettes/show.html.erb
+++ b/app/views/recettes/show.html.erb
@@ -33,7 +33,7 @@
   <div class="col-md-8 col-md-offset-2">
   	<h3>commentaires</h3>
   	<hr>
-<%= form_for([@recette, @commentaire], :html => {class:"form-horizontal",role:"form"}, local: true) do |form| %>
+<%= form_for([@recette, @commentaire], remote:true, :html => {class:"form-horizontal",role:"form"}, local: true) do |form| %>
 <div class="form-group">
   <div class="control-label col-md-2">
     <%= form.label :description, "commentaire"  %>
@@ -64,6 +64,8 @@
 <div class="row">
 	<div class="col-md-offset-2 col-md-8">
 		<h3>Aucun commentaire posté </h3>
+		<div id="messages">
+		</div>
 	</div>
 </div>
 <%end%>
