Commentaire live et ChatRoom

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -116,9 +116,60 @@ footer ul li {
 }
 
 .mg-top{
-  margin-top: 10px;
+  margin-top: 10px !important;
+}
+.pt_4{
+  padding-top: 4px;
+  padding-left: 0px;
+}
+.pd-0{
+  padding-right: 0px !important;
+  padding-left: 0px !important;
+  img{
+    float: right;
+  }
+}
+.float_right{
+  float:right;
 }
 
 .input_checkbox input{
   width: auto !important;
+}
+
+.center-block {
+  float: none;
+}
+
+.chat-container {
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 150px;
+  width: 80;
+}
+
+.message-container {
+  .form-control {
+    float: left;
+    width: 80%;
+  }
+  .btn {
+    float: right;
+    position: relative;
+    height: 54px !important;
+    width: 18%;
+  }
+}
+
+.message {
+  padding-left: 5px;
+  padding-top: 10px;
+}
+
+.messages {
+  border: 1px solid #ea5252;
+  height: 16em;
+  position: relative;
+  overflow: auto;
 }
