--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -19,6 +19,7 @@
         <li><%= link_to "les chefs", chefs_path %></li>
         <li><%= link_to "Toutes les Recettes", recettes_path %> </li>
         <%if logged_in?%>
+          <li><%= link_to "Chat Room", chat_path %> </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Gerer vos recettes <span class="caret">  </span></a>
             
